# seja

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
.github/: CODEOWNERS  codecov.yml  dependabot.yml
.github/workflows/: publish.yml
Docker/: entrypoint.sh  litestream.yml
docs/: ARCHITECTURE.md
mcp/: pyproject.toml
mcp/seja_mcp/: lifecycle_fsm.py  server.py
mcp/seja_mcp/db/: connection.py  migrate.py  schema.py
mcp/seja_mcp/db/migrations/: 001_initial.sql
mcp/seja_mcp/models/: schemas.py
mcp/seja_mcp/modules/: __init__.py  briefs.py  constitution.py  decisions.py  design.py  experiments.py  journeys.py  lifecycle.py  pending.py  perspectives.py  plans.py  project.py  research.py  telemetry.py  tests.py  workspace.py
mcp/seja_mcp/sync/: indexer.py  markdown_export.py
opencode/: AGENTS.md.global  AGENTS.md.local.tpl  opencode.json.tpl
opencode/agents/: seja-architect.md.tpl  seja-boost.md.tpl  seja-brief.md.tpl  seja-check.md.tpl  seja-chronicler.md.tpl  seja-council.md.tpl  seja-docs.md.tpl  seja-implement.md.tpl  seja-oracle.md.tpl  seja-planner.md.tpl  seja-research.md.tpl  seja-semiotic.md.tpl  seja-strategy.md.tpl  seja-tester.md.tpl  seja-triage.md.tpl  seja-workspace.md.tpl
opencode/commands/: seja-boost.json  seja-brief.json  seja-check.json  seja-council.json  seja-debug.json  seja-docs.json  seja-inspect.json  seja-plan.json  seja-research.json  seja-semiotic.json  seja-status.json  seja-triage.json  (+1 more)
scripts/: seja
security/: cosign.pub  seccomp-profile.json
tests/: conftest.py
(+20 files in other folders)
