[project]
name = "seja-mcp"
version = "2.0.0"
description = "SEJA MCP Server — Semiotic Engineering Governance harness for OpenCode agents"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0,<4",
    "python-statemachine>=2.1,<4",
    "pydantic>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "python-dotenv>=1.0,<2",
    "pyyaml>=6.0,<7",
    "uuid7>=0.1,<1",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0,<6",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = false
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
